# ariadneExample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
crazy_river/: CMakeLists.txt  README.md  analysis.hh  crazy_river.hh  test.cc
crazy_river/easy/: CMakeLists.txt  analysis.hh  test.cc
crazy_river/easy/modules/: controllers.hh  tanks.hh
crazy_river/hard/: CMakeLists.txt  README.md  analysis.hh  crazy_river.hh  test.cc
crazy_river/hard/modules/: controllers.hh  tanks.hh  valves.hh
crazy_river/hysteresis/: CMakeLists.txt  analysis.hh  crazy_river.hh  test.cc
crazy_river/hysteresis/modules/: controllers.hh  plants.hh  valves.hh
crazy_river/modules/: controllers.hh  tanks.hh  valves.hh
dam/: CMakeLists.txt  README.md  analysis.hh  dam.hh  test.cc
dam/modules/: controllers.hh  tanks.hh  valves.hh
hanoi/: CMakeLists.txt  README.md  hanoi.hh  test.cc
hanoi/modules/: controllers.hh  tanks.hh  valves.hh
hydropower/: CMakeLists.txt  analysis.hh  hydropower.hh  test.cc
hydropower/exponential/: CMakeLists.txt  analysis.hh  hydropower.hh  test.cc
hydropower/exponential/modules/: controllers.hh  plants.hh  valves.hh
hydropower/linear/: CMakeLists.txt  analysis.hh  hydropower.hh  test.cc
hydropower/linear/diagonal/: CMakeLists.txt  analysis.hh  hydropower.hh  test.cc
hydropower/linear/diagonal/modules/: plants.hh
hydropower/linear/exponential/: CMakeLists.txt  analysis.hh  hydropower.hh  test.cc
hydropower/linear/exponential/modules/: plants.hh
hydropower/linear/modules/: controllers.hh  plants.hh  valves.hh
hydropower/modules/: controllers.hh  tanks.hh
hydropower/non_linear/exponential/: CMakeLists.txt  analysis.hh  test.cc
hydropower/non_linear/exponential/modules/: controllers.hh  plants.hh  valves.hh
hydropower/self_loop/: CMakeLists.txt  analysis.hh  hydropower.hh  test.cc
hydropower/self_loop/modules/: controllers.hh  plants.hh
lock_system/: CMakeLists.txt  Readme.md  analysis.hh  lock.cc  lock_system.hh  test.cc
lock_system/easy/: CMakeLists.txt  analysis.hh  lock_system.hh  test.cc
lock_system/easy/modules/: tanks.hh
lock_system/hard/: CMakeLists.txt  README.md  analysis.hh  lock_system.hh  test.cc
lock_system/hard/modules/: controllers.hh  tanks.hh  valves.hh
lock_system/hysteresis/: CMakeLists.txt  analysis.hh  lock_system.hh  test.cc
lock_system/hysteresis/modules/: controllers.hh  plants.hh  valves.hh
lock_system/modules/: controllers.hh  plants.hh  tanks.hh  valves.hh
lock_system_easy/: CMakeLists.txt  analysis.hh  lock_system_easy.hh  test.cc
lock_system_easy/modules/: controllers.hh  tanks.hh
matlab/: derivate.m  is005.fig  is01.fig  t_consumpiton.data  t_consumption.fig  t_consumption1.fig
prova/: CMakeLists.txt  README  analysis.h  prova.cc  system.h  tutorial.cc
scotland_issue/: CMakeLists.txt  analysis.hh  scotland_issue.hh  test.cc
scotland_issue/modules/: controllers.hh  plants.hh  tanks.hh  valves.hh
scottland_issue/: CMakeLists.txt  README.md  analysis.hh  scottland_issue.hh  test.cc
scottland_issue/modules/: tanks.hh
tank2valve/: CMakeLists.txt  README.md  analysis.hh  tank2valve.hh  test.cc
tick/: CMakeLists.txt  test.cc  tick.hh
